[package]
name = "owoifier"
description = "Translates English text into OwO using magic."
version = "0.1.0"
authors = ["FernOfSigma <fernofsigma@tuta.io>"]

edition = "2021"
readme = "README.md"

categories = ["command-line-utilities"]

[dependencies]
clap = { version = "3.1.18", features = ["cargo"] }
lazy_static = "1.4.0"
regex = "1"
