[package]
name = "owoifier"
version = "1.0.0"
authors = ["FernOfSigma <fernofsigma@tuta.io>"]
edition = "2021"
description = "Translates English text into OwO using magic."

documentation = "https://github.com/FernOfSigma/owoifier-rs"
homepage = "https://github.com/FernOfSigma/owoifier-rs"
repository = "https://github.com/FernOfSigma/owoifier-rs"

readme = "README.md"
license = "GPL-3.0-or-later"

keywords = ["owo", "command-line", "meme"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "3.1.18", features = ["cargo"] }
lazy_static = "1.4.0"
regex = "1"
