[package]
name = "owoifier"
version = "1.2.0"
authors = ["FernOfSigma <fernofsigma@tuta.io>"]
edition = "2021"
description = "Translates English text to OwO using magic."
homepage = "https://github.com/FernOfSigma/owoifier-rs"
repository = "https://github.com/FernOfSigma/owoifier-rs"
documentation = "https://docs.rs/owoifier"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["owo", "command-line", "meme"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "3.1.18", features = ["cargo"] }
lazy_static = "1.4.0"
regex = "1"
